@@ -1,5 +1,10 @@
 2013-10-09  Anton Kolesov <Anton.Kolesov@synopsys.com>
 
+	* arc-versions.sh: Support Git 1.8 which have different output from
+	previous versions.
+
+2013-10-09  Anton Kolesov <Anton.Kolesov@synopsys.com>
+
 	* dejagnu/nsim-extra.exp: Fix constant nsim_gdb	reboots. It was caused by
 	output buffer becoming full and not cleared by expect.
 
